# Social-Support-Agentic-AI

./: .gitignore  ARCHITECTURE_DIAGRAM.md  Dockerfile  LANGFUSE_INTEGRATION_COMPLETE.md  LANGGRAPH_ARCHITECTURE.md  OCR_CAPABILITY_SUMMARY.txt  README.md  SOLUTION_SUMMARY.md  add_comprehensive_docstrings.py  add_policy_scores.py  ai_case_study.txt  application_graph.graphml  build_networkx_graph.py  check_imports.py  deploy.sh  docker-compose.yml  fastapi_test_endpoints.py  fix_dataset_generation.py  generate_diverse_dataset.py  load_test.py  migrate_database_schema.py  phase4_ml_training.py  phase6_fast_test.py  phase6_test_suite.py  phase7_integration_test.py  phase7_lightweight_test.py  phase8_governance_test.py  phase8_verification_test.py  phase9_fastapi_test.py  phase9_integration_verification.py  pyproject.toml  requirements.txt  rigorous_test.py  run_critical_tests.py  run_data_generation.py  start.sh  startup.py  test.py  test_agents.py  test_all_components.py  (+28 more)
.streamlit/: config.toml
data/: audit.db  governance.db  governance.db-shm  governance.db-wal  test_applications_metadata.json
data/databases/: DATABASE_REFERENCE.md  application_graph.graphml  application_graph.json  applications.db  applications.db-shm  applications.db-wal  cache.json  cache.json.backup  conversations.db  conversations.db-shm  conversations.db-wal  graph_statistics.json  load_stats.json  social_support.db  unified_db.sqlite
data/observability/: all_traces.json  langfuse_comprehensive_trace_20260101_025359.json  (+77 more)
docs/: DATABASE_ARCHITECTURE_EXPLANATION.md  DATA_QUALITY_FIXES.md  EMBEDDINGS_DOCUMENTATION.md  LANGFUSE_GOVERNANCE_INTEGRATION.md  LANGFUSE_INTEGRATION_COMPLETE.md  LANGGRAPH_ARCHITECTURE.md  SOLUTION_SUMMARY.md  SOLUTION_SUMMARY_FAANG.md  SYSTEM_ARCHITECTURE_DATA_FLOW.md
logs/: langfuse_comprehensive_structured.jsonl  langfuse_quick_demo_structured.jsonl  social_support_api_structured.jsonl
models/: ML_MODEL_GUIDE.md  eligibility_model.pkl  eligibility_model_v2.pkl  eligibility_model_v3.pkl  feature_names.json  feature_names.pkl  feature_names_v3.json  feature_scaler.pkl  feature_scaler_v3.pkl  model_latest.pkl  model_metadata.json  model_metadata_v3.json  random_forest_metadata_v4.json  random_forest_v4.pkl  train_dual_models.py  train_faang_ml_model.py  train_ml_model_v2.py  training_report.json  training_report_v3.json  xgboost_metadata_v4.json  xgboost_v4.pkl
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: additional_cleanup.sh  analyze_project_cleanup.py  archive_src_manual.sh  comprehensive_data_regeneration.py  final_cleanup.sh  full_demo.py  generate_full_dataset.py  generate_production_test_data.py  index_chromadb.py  ingest_documents_to_chromadb.py  ingest_documents_to_chromadb_old.py  populate_databases.py  start_ui.sh
streamlit_app/: README.md  app.py  app_old.py  main_app.py  run_app.sh
tests/: TEST_COVERAGE_REPORT.md  test_agents.py  test_api.py  test_langfuse_comprehensive.py  test_langfuse_integration.py  test_real_files_e2e.py
(+379 files in other folders)
